// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation 1`] = `
"UglifyJs Plugin Invalid Options

options should NOT have additional properties
"
`;

exports[`validation 2`] = `
"UglifyJs Plugin Invalid Options

options.cache should be boolean
options.cache should be string
options.cache should match some schema in anyOf
"
`;

exports[`validation 3`] = `
"UglifyJs Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match some schema in anyOf
"
`;

exports[`validation 4`] = `
"UglifyJs Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match some schema in anyOf
"
`;

exports[`validation 5`] = `
"UglifyJs Plugin Invalid Options

options.sourceMap should be boolean
"
`;

exports[`validation 6`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions should be object
"
`;

exports[`validation 7`] = `
"UglifyJs Plugin Invalid Options

options.warningsFilter should pass \\"instanceof\\" keyword validation
"
`;
